Fix for Firefox browser to force the text of the button in the bottomsheet to expand to full width to align the text with the button image.

--- a/src/app/main/apps/overview/sheet/overview-sheet.scss
+++ b/src/app/main/apps/overview/sheet/overview-sheet.scss
@@ -8,6 +8,6 @@
   div
   {
     font-weight: bold;
-
+    width: 100%;
   }
 }
